# microservice-trip

./: README.md  docker-compose.yml  start.sh
api_gateway/: Dockerfile
api_gateway/config/: nginx.conf
restApi/: auth.js  circuitBreaker.js  httpClient.js  package-lock.json  package.json  rollup.config.js  server.js
restApi/cache/: bookingCache.js  cache.js  userCache.js
rest_api/: Cargo.toml  Dockerfile  compile_to_wasm.sh
rest_api/src/: auth.js  auth.rs  bookingCache.js  cache.rs  circuitBreaker.js  circuitbreaker.rs  client.rs  httpClient.js  main.rs  package.json  server.js
rest_api/src/cache/: bookingCache.js  cache.js  userCache.js
rest_api/src/wasm_modules/bookingCache/: Cargo.toml  circuitBreaker.js
rest_api/src/wasm_modules/bookingCache/src/: lib.rs
rest_api/src/wasm_modules/bookingCacheAndCiruitBreaker/: CircuitBrekaer.js  CircuitBrekaer_bg.wasm
rest_api/src/wasm_modules/bookingCacheAndCiruitBreaker/src/: lib.rs
rest_api/src/wasm_modules/circuitBreaker/: Cargo.toml  httpClient.js
rest_api/src/wasm_modules/circuitBreaker/src/: lib.rs
rest_api/src/wasm_modules/jwt/: Cargo.toml
rest_api/src/wasm_modules/jwt/src/: lib.rs
rest_api/src_old/: auth.js  bookingCache.js  package.json
