[package]
name = "microservice_trip_wasmedge"
version = "0.0.1"
authors = ["thoeff2s"]
edition = "2021"

[[bin]]
name = "restapi"
path = "./src/main.rs"

[dependencies]
# Spezieller Error Type für std::error::Error
anyhow = "1.0"
# Um Json zu serialisieren
serde_json = "1.0"
# Generelles serialisierungs und desiralisierungs Framework
serde = { version = "1.0", features = ["derive"] }
# URL Bibliothek basierend auf dem WHATWG URL Standard
url = "2.3"
# HTTP Implementierung für Rust
# Basiert auf dem Originalen Hyper mit zusätzlichen Support für Wasm
hyper_wasi = { version = "0.15", features = ["full"] }
# Asynchrone Applikationen in Rust
# Ebenfalls basierend auf der originalen Tokio Lib , zusätzlich mit WASM
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
regex = "0.2"
wasmedge_http_req = "0.9.0"
chrono = "0.4.23"
wasmedge_wasi_socket = "0.4.2"
jsonwebtoken = "8.2.0"