[package]
name = "bookingCache"
version = "0.1.0"
authors = ["Tim Hoeffner <tim.florian.hoeffner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"
serde_json = "1.0"